--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79f379">  <td>19/03/15 13:32:00</td>   <td>0</td> <td title="&gt;&gt;Page.setUp()[pri:0, instance:com.amazon.rough.TestClass@f6c48ac]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504527234</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>19/03/15 13:32:07</td>   <td>6981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.testClass()[pri:0, instance:com.amazon.rough.TestClass@f6c48ac]">testClass</td> 
-  <td>main@504527234</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>19/03/15 13:32:07</td>   <td>7030</td> <td title="&lt;&lt;Page.tearDown()[pri:0, instance:com.amazon.rough.TestClass@f6c48ac]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504527234</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/03/15 15:43:00</td>   <td>0</td> <td title="&gt;&gt;Page.setUp()[pri:0, instance:com.amazon.testcases.SignInTest@57fffcd7]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@836514715</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/03/15 15:43:09</td>   <td>8330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.signInTest()[pri:0, instance:com.amazon.testcases.SignInTest@57fffcd7]">signInTest</td> 
+  <td>main@836514715</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/03/15 15:43:39</td>   <td>38814</td> <td title="&lt;&lt;Page.tearDown()[pri:0, instance:com.amazon.testcases.SignInTest@57fffcd7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@836514715</td>   <td></td> </tr>
 </table>
