--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">916</td><td></td><td></td></tr>
+<tr><th colspan="7">Amazon Test Automation</th></tr>
+<tr><td><a href="#t0">Navigate to Sign In Page Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">800</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.amazon.testcases.SignInTest</td><td><a href="#m0">signInTest</a></td><td rowspan="1">1552646015446</td><td rowspan="1">892</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Amazon Test Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Navigate to Sign In Page Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.amazon.testcases.NavigateToSignInPageTest</td><td><a href="#m0">navigateToSignInPageTest</a></td><td rowspan="1">1552647737189</td><td rowspan="1">777</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.amazon.testcases.SignInTest#signInTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Navigate to Sign In Page Test</h2><h3 id="m0">com.amazon.testcases.NavigateToSignInPageTest#navigateToSignInPageTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
