--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a9f61">  <td>19/03/15 16:03:27</td>   <td>0</td> <td title="&gt;&gt;Page.setUp()[pri:0, instance:com.amazon.testcases.SignInTest@57fffcd7]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>19/03/15 16:03:35</td>   <td>7509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTest.signInTest()[pri:0, instance:com.amazon.testcases.SignInTest@57fffcd7]">signInTest</td> 
-  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="8a9f61">  <td>19/03/15 16:03:36</td>   <td>8435</td> <td title="&lt;&lt;Page.tearDown()[pri:0, instance:com.amazon.testcases.SignInTest@57fffcd7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@836514715</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/03/15 22:31:27</td>   <td>0</td> <td title="&gt;&gt;Page.setUp()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@65e2dbf3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908143486</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/03/15 22:31:36</td>   <td>8648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigateToSignInPageTest.navigateToSignInPageTest()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@65e2dbf3]">navigateToSignInPageTest</td> 
+  <td>main@1908143486</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/03/15 22:31:47</td>   <td>20065</td> <td title="&lt;&lt;Page.tearDown()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@65e2dbf3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908143486</td>   <td></td> </tr>
 </table>
