--- a/test-output/old/Amazon Test Automation/methods.html
+++ b/test-output/old/Amazon Test Automation/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Amazon Test Automation</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a9f61">  <td>19/03/15 22:51:58</td>   <td>0</td> <td title="&gt;&gt;Page.setUp()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@65e2dbf3]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908143486</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>19/03/15 22:52:01</td>   <td>3398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigateToSignInPageTest.navigateToSignInPageTest()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@65e2dbf3]">navigateToSignInPageTest</td> 
-  <td>main@1908143486</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/03/16 21:41:47</td>   <td>0</td> <td title="&gt;&gt;Page.setUp()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@7403c468]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1375995437</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/03/16 21:41:57</td>   <td>9806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigateToSignInPageTest.navigateToSignInPageTest()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@7403c468]">navigateToSignInPageTest</td> 
+  <td>main@1375995437</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/03/16 21:42:28</td>   <td>40933</td> <td title="&lt;&lt;Page.tearDown()[pri:0, instance:com.amazon.testcases.NavigateToSignInPageTest@7403c468]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1375995437</td>   <td></td> </tr>
 </table>
